--- a/interface/index.html
+++ b/interface/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <title>Doppelganger Interface</title>
+    <link rel="stylesheet" href="./styles/index.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="./scripts/connect.js"></script>
 </head>
-<body onload="start()">
-    <div class="discord">
-        <div class="display">
-            <div class="display-chat" id="chatbox">
-                <div class="chat-message">
-                    <img src="https://cdn.discordapp.com/avatars/832062645334573096/146d356267380966bc0b322dbe15fb6b.webp?size=2048" class="message-icon">
-                    <div class="message-body">
-                        <div class="message-header">
-                            Doppelganger
-                        </div>
-                        <div class="message-text">
-                            Bem vindo, eu
+
+<body onload="start();">
+    <div class="display">
+        <div class="guilds" id="guilds">
+        </div>
+        <div class="channels" id="channels">
+            <div class="channel"># escolha-uma-guild #</div>
+            <div class="channel"># e-um-canal #</div>
+        </div>
+        <div class="chatbox" id="chatbox">
+            <div class="chat-header" id="chat-header">Nenhum chat selecionado</div>
+            <div class="fix">
+                <div class="chat-display" id="chat-display">
+                    <div class="message" id="">
+                        <img class="message-icon" src="https://cdn.discordapp.com/avatars/832062645334573096/146d356267380966bc0b322dbe15fb6b.webp?size=2048">
+                        <div class="message-body">
+                            <div class="message-header">Doppelganger</div>
+                            <div class="message-content">???</div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="input-chat">
-                <input class="text-input" id="chatinput" placeholder="Conversar em ">
+            <div class="chat-input" id="chat-input">
+                <input id="input" placeholder="Sua mensagem aqui">
             </div>
         </div>
-        
     </div>
+
 </body>
+
 </html>
