--- a/interface/index.html
+++ b/interface/index.html
@@ -34,6 +34,10 @@
                 <input id="input" placeholder="Sua mensagem aqui">
             </div>
         </div>
+        <div class="dms" id="dms">
+            <div class="dm-button" id="dm-button" onclick="toggleDMButton()">
+            </div>
+        </div>
     </div>
 
 </body>
